content/_generated-doc/2.7/config/quarkus-kubernetes-config-kubernetes-config-source-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-kubernetes-config-source-config_configuration]]link:#quarkus-kubernetes-config-kubernetes-config-source-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.enabled]]`link:#quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.enabled[quarkus.kubernetes-config.enabled]`

[.description]
--
If set to true, the application will attempt to look up the configuration from the API server
--|boolean 
|`false`


a| [[quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.fail-on-missing-config]]`link:#quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.fail-on-missing-config[quarkus.kubernetes-config.fail-on-missing-config]`

[.description]
--
If set to true, the application will not start if any of the configured config sources cannot be located
--|boolean 
|`true`


a| [[quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.config-maps]]`link:#quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.config-maps[quarkus.kubernetes-config.config-maps]`

[.description]
--
ConfigMaps to look for in the namespace that the Kubernetes Client has been configured for. ConfigMaps defined later in this list have a higher priority that ConfigMaps defined earlier in this list. Furthermore any Secrets defined in `secrets`, will have higher priorities than all ConfigMaps.
--|list of string 
|


a| [[quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.secrets]]`link:#quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.secrets[quarkus.kubernetes-config.secrets]`

[.description]
--
Secrets to look for in the namespace that the Kubernetes Client has been configured for. If you use this, you probably want to enable `quarkus.kubernetes-config.secrets.enabled`. Secrets defined later in this list have a higher priority that ConfigMaps defined earlier in this list. Furthermore these Secrets have a higher priorities than all ConfigMaps defined in `configMaps`.
--|list of string 
|


a| [[quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.namespace]]`link:#quarkus-kubernetes-config-kubernetes-config-source-config_quarkus.kubernetes-config.namespace[quarkus.kubernetes-config.namespace]`

[.description]
--
Namespace to look for config maps and secrets. If this is not specified, then the namespace configured in the kubectl config context is used. If the value is specified and the namespace doesn't exist, the application will fail to start.
--|string 
|

|===